--- a/app/(portfolio)/811spotter/page.mdx
+++ b/app/(portfolio)/811spotter/page.mdx
@@ -138,6 +138,7 @@ On top of all that, I made the app more stable and secure to meet industry stand
 </div>
 
 <PopImage
+  priority
   src="/images/portfolio/811spotter/mobile-set-1.png"
   alt="811spotter"
   width={3704}
@@ -154,6 +155,7 @@ On top of all that, I made the app more stable and secure to meet industry stand
 />
 
 <PopImage
+  priority
   src="/images/portfolio/811spotter/1.png"
   alt="811spotter"
   width={1799}
