Add SEO metadata to portfolio pages

--- a/app/(portfolio)/811spotter/page.mdx
+++ b/app/(portfolio)/811spotter/page.mdx
@@ -3,6 +3,12 @@ import { Badge } from "@/components/catalyst/badge"
 import PopImage from "@/components/typo/PopImage"
 import Link from "next/link"
 
+export const metadata = {
+  title: "811spotter Web & Mobile App – Andrew Kodkod",
+  description: "811spotter is a SaaS automated 811 ticket management for contractors",
+  author: "Andrew Kodkod",
+}
+
 # 811spotter Mobile and Web
 
 <PopImage
