--- a/app/(portfolio)/dinghy/page.mdx
+++ b/app/(portfolio)/dinghy/page.mdx
@@ -1,6 +1,12 @@
 import { DescriptionDetails, DescriptionTerm, DescriptionList } from "@/components/catalyst/description-list"
 import { Badge } from "@/components/catalyst/badge"
 
+export const metadata = {
+  title: "Dinghy Web & Mobile App – Andrew Kodkod",
+  description: "Revolutionary online insurance platform for mobile and web, serving multiple insurers across the UK and USA",
+  author: "Andrew Kodkod",
+}
+
 # Dinghy Web & Mobile
 
 Revolutionary online insurance platform for mobile and web, serving multiple insurers across the UK and USA
