--- a/app/(portfolio)/schoolcnxt/page.mdx
+++ b/app/(portfolio)/schoolcnxt/page.mdx
@@ -1,6 +1,12 @@
 import { DescriptionDetails, DescriptionTerm, DescriptionList } from "@/components/catalyst/description-list"
 import { Badge } from "@/components/catalyst/badge"
 
+export const metadata = {
+  title: "SchoolCNXT Web & Mobile App – Andrew Kodkod",
+  description: "School Social Network for Parents, Teachers, and Students in the USA",
+  author: "Andrew Kodkod",
+}
+
 # SchoolCNXT Web & Mobile App
 
 School Social Network for Parents, Teachers, and Students in the USA
