--- a/src/pages/blog.mdx
+++ b/src/pages/blog.mdx
@@ -9,8 +9,8 @@ import Footer from "../components/content/Footer.astro"
   description="Blog about software development, design, and business"
 >
   <div className="pb-[10vh]">
-    <ContentProseWidth class="max-w-lg space-y-8 pt-[8vh] md:pt-[15vh]">
-      <h1 className="text-3xl md:text-5xl md:text-center font-black tracking-tighter md:mb-20">Atomic Blog</h1>
+    <ContentProseWidth class="max-w-lg pt-[12vh] md:pt-[15vh]">
+      <h1 className="text-4xl md:text-5xl md:text-center font-black tracking-tighter mb-8 md:mb-20">Atomic Blog</h1>
 
       <AtomicBlogPost title="Atomic Improvements #5" date="October 3, 2024">
         Hire people for their soft skills. Hard skills can be learned or replaced by AI, but poor soft skills will make your work together a nightmare.
